--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -1,6 +1,8 @@
 .chat{
     flex: 2;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .chatInfo{
     display: flex;
@@ -16,9 +18,11 @@
 .chatIcons{
     padding: 10px;
     display: flex;
+    gap: 10px;
 
 }
 .chatIcons img{
+    padding: 10px;
     height: 25px;
     width: 25px;
 }
