UI U4: user and reciever chat page

--- a/src/css/messages.css
+++ b/src/css/messages.css
@@ -1,4 +1,11 @@
 .messages{
     background-color: rgb(207, 197, 246);
     height: 100%;
+    overflow: scroll;
+
+    
+}
+
+.messages::-webkit-scrollbar{
+    display: none;
 }
