--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,20 +1,25 @@
 .input{
-    background-color: white;
+    background-color:rgb(207, 197, 246);
     height: 50px;
-    padding: 5px;
+
     display: flex;
     align-items: center;
-    justify-content: space-between;
-
+    justify-content: right;
+    gap: 15px;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .input input{
-    width:100%;
     border: none;
     outline: none;
-    color: rgb(51, 51, 54);
+    border-radius: 20px;
+    background-color: #ffffff;
+    padding: 7px 15px;
     font-size: 15px;
     font-family: 'Segoe UI';
+    width: 100%;
 
     &::placeholder{
         color: lightgrey;
@@ -22,12 +27,10 @@
 }
 
 .send{
-    
+    max-width: 150px;
     display: flex;
-    gap: 10px;
     align-items: center;
-
-    
+    gap: 15px;
 }
 
 .send img{
