--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,12 @@
     justify-content: center;
   }
 
+  .icon{
+    display:flex;
+    align-content: center;
+    gap: 15px;
+  }
+
 .formWrapper {
     background-color: white;
     padding: 20px 60px;
@@ -16,6 +22,10 @@
     gap: 10px;
     align-items: center;
     }
+
+.formWrapper img{
+  height: 200%;
+}
 
 .title {
       font-family: sans-serif;
