--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,35 +1,44 @@
 .input{
-    background-color:rgb(207, 197, 246);
-    height: 50px;
 
+    background-color:var(--c3);
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: right;
     gap: 15px;
     padding: 5px;
+
     padding-left: 15px;
     padding-right: 15px;
+    background: radial-gradient(var(--c4) 15%, transparent 16%) 0 0,
+    radial-gradient(var(--c4) 15%, transparent 16%) 8px 8px;
+    background-color: var(--c3);
+    background-size: 10px 10px; 
 }
 
 .input input{
     border: none;
     outline: none;
     border-radius: 20px;
-    background-color: #ffffff;
+    background-color: var(--c4);
     padding: 7px 15px;
     font-size: 15px;
-    font-family: 'Segoe UI';
+    font-family: var(--fnt);
     width: 100%;
 
+    transition: transform 0.1s cubic-bezier(0.5, 0.1, 0.5, 1);
+
     &::placeholder{
-        color: lightgrey;
+        color: var(--lgr);
     }
+
 }
 
 .send{
     max-width: 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 15px;
 }
 
@@ -38,16 +47,22 @@
     height: 24px;
     object-fit: cover;
     cursor: pointer;
+    transition: transform 0.1s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 .send button{
-    background-color: #7b96ec;
+    background-color: var(--c0);
     border-radius: 20px;
-    color: white;
+    color: var(--c4);
     padding: 10px 15px;
     font-weight: bold;
-    border: none;
+    border: 1px solid var(--c1);
     cursor: pointer;
+    transition: transform 0.1s cubic-bezier(0.25, 0.1, 0.25, 1);
     
 }
+
+.input :hover {
+    transform: scale(1.1);
+  }
 
