--- a/src/css/message.css
+++ b/src/css/message.css
@@ -1,18 +1,18 @@
 .message{
     display: flex;
+    align-items:start;
     padding: 10px;
     gap: 15px;
 
-
-
     &.owner{
         flex-direction: row-reverse;
+
         &.owner p{
-            background-color: rgb(107, 84, 153);
-            color: aliceblue;
+            background-color: var(--c0);
+            color: var(--c4);
             border-radius: 25px;
             border-top-right-radius: 0px;
-            padding: 10px 20px;
+
         }
 
         &.owner .messageData{
@@ -21,10 +21,9 @@
         }
 
         &.owner .messageData img{
-            
-            max-width: 50%;
             border-radius: 25px;
-
+            border: 5px solid var(--c0);
+            border-top-right-radius: 0px;
         }
 
     }
@@ -34,7 +33,8 @@
     gap: 5px;
     display: flex;
     flex-direction: column;
-    color: grey;
+    color: var(--lgr);
+    font: var(--fnt);
 }
 
 .messageInfo img{
@@ -42,6 +42,8 @@
     border-radius: 50%;
     width: 30px;
     height: 30px;
+    border: 1px solid var(--c2);
+    
 }
 
 .messageData{
@@ -54,15 +56,28 @@
 
 }
 .message p{
-    background-color: white;
-    font-family: 'Segoe UI';
+    background-color: var(--c4);
+    font-family: var(--fnt);
+    color: var(--c0);
     border-radius: 25px;
     border-top-left-radius: 0px;
-    padding: 10px 20px;
+    padding: 5px 10px;
 
 }
 .messageData img{
+    
     max-width: 50%;
     border-radius: 25px;
+    border: 5px solid var(--c4);
+    border-top-left-radius: 0px;
+    cursor: pointer;
 }
 
+@keyframes bounce {
+    0%, 20%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-20px);
+    }
+  }
