--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,16 +1,17 @@
-
 .navbar{
-    background-color:#2c2b44;
+    background-color: var(--cx);
     display:flex;
     height: 50px;
     align-items: center;
     justify-content: space-between;
+    border-radius: 25px;
+    margin: 5px;
     
   }
   
   .logo1 {
-      font-family: sans-serif;
-      color: #bcbcbd;
+      font-family: var(--fnt);
+      color: var(--c4);
       font-weight: bold;
       font-size: 15px;
       padding: 10px;
@@ -18,8 +19,8 @@
     }
   
   .user{
-    font-family: sans-serif;
-    color: #73737d;
+    font-family: var(--fnt);
+    color: var(--c3);
     font-weight: bold;
     display: flex;
     justify-content:end;
@@ -33,27 +34,26 @@
   }
   
   .navbar button {
-    background-color: #5f6887;
+    background-color: var(--c0);
     border: none;
     border-radius: 20px;
-    color: rgb(255, 255, 255);
+    color: var(--c3);
     padding: 5px 10px;
     font-weight: bold;
     border: none;
     cursor: pointer;
+    transition: transform 0.1s cubic-bezier(0.5, 0.1, 0.5, 1);
 
-      /* border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      height: 20px;
-      width: 50px; */
+    &:hover {
+      transform: scale(1.1);
     }
-  
+
+    }
     .navbar img{
     width: 25px;
     height: 25px;
     object-fit: cover;
     border-radius: 50%;
-
   }
-  
+
+ 
