--- a/src/css/search.css
+++ b/src/css/search.css
@@ -1,11 +1,11 @@
 .search{
 
     border: none;
-    border-bottom: 1px solid #7c78ae;
+    border-bottom: 1px solid var(--cx);
 }
 
 .search span{
-    font-family:'Segoe UI';
+    font-family:var(--fnt);
     color: rgb(187, 150, 165);
     font-size: x-small;
     padding: 10px;
@@ -13,17 +13,20 @@
 
 .searchForm input{
     
-    background-color: #4b4972;
+    background-color: var(--c0);
     border-color: transparent;
+    outline-color: none;
 
     padding: 5px 10px;
     width: 100%;
-    color: white;
+    color: var(--c4);
+
 
     &::placeholder{
-        color: rgba(255, 255, 255, 0.255);
-    
+        color: var(--lgr);
+        font: var(--fnt);
     }
+
 
 }
 
@@ -32,34 +35,38 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    color: white;
     cursor: pointer;
-    font-family: 'Segoe UI';
-
+    font-family: var(--fnt);
+    transition: transform 0.1s cubic-bezier(0.25, 0.1, 0.25, 1);
     &:hover{
-        background-color: #32304b;
+
+        transform: scale(1.1);
+        background-color: var(--cx);
     }
 
 }
 
+
+
 .userChat p{
 
-    font-size: 10px;
-    color: lightgrey;
+    font-size: 12px;
+    color:var(--lgr);
     margin: 0px;
     padding: 0px;
 
 }
 
 .userChat span{
-    color: white;
+    color: var(--wt);
     font-weight: 400;
     font-size: 14px;
 }
 
 .userChat img{
-    height: 30px;
-    width: 30px;
+    height: 35px;
+    width: 35px;
     border-radius: 50%;
     object-fit: cover;
+    border: 2px solid var(--c1);
 }
