--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -3,33 +3,59 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-radius: 30px;
+}
+.userInfo{
+    display: flex;
+    align-items: center;
+    gap:10px
     
 }
+
 .chatInfo{
     display: flex;
     justify-content: space-between;
     background-color: var(--c1);
     align-items: center;
     height: 50px;
-    padding-left: 10px;
     color: var(--cx);
     font-weight: bold;
     font-family: var(--fnt);
+    border-radius: 30px;
+    padding: 5px;
+}
+
+.chatInfo img{
+    height: 30px;
+    width: 30px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 1px solid var(--cx);
+    transition: transform 0.1s cubic-bezier(0.5, 0.1, 0.5, 1);
+
+    &:hover {
+      transform: scale(5);
+    }
+
+
 }
 
 .chatIcons{
-    padding: 15px;
+
     display: flex;
+    border-radius: 30px;
 }
 .chatIcons img{
     padding: 10px;
     height: 20px;
     width: 20px;
     object-fit: cover;
+    border-radius: 0px;
+    border: transparent;
     transition: transform 0.1s cubic-bezier(0.25, 0.1, 0.25, 1);
 
-}
+    &:hover {
+        transform: scale(1.3);
+      }
 
-.chatIcons :hover {
-    transform: scale(1.3);
-  }
+}
