--- a/src/css/input.css
+++ b/src/css/input.css
@@ -7,6 +7,7 @@
     justify-content: right;
     gap: 15px;
     padding: 5px;
+    border-bottom-right-radius: 30px;
 
     padding-left: 15px;
     padding-right: 15px;
@@ -25,11 +26,15 @@
     font-size: 15px;
     font-family: var(--fnt);
     width: 100%;
-
+    color: var(--c0);
     transition: transform 0.1s cubic-bezier(0.5, 0.1, 0.5, 1);
 
     &::placeholder{
         color: var(--lgr);
+    }
+
+    &:hover{
+        transform: scale(1.02);
     }
 
 }
@@ -48,6 +53,9 @@
     object-fit: cover;
     cursor: pointer;
     transition: transform 0.1s cubic-bezier(0.25, 0.1, 0.25, 1);
+    &:hover{
+        transform: scale(1.2);
+    }
 }
 
 .send button{
@@ -59,10 +67,14 @@
     border: 1px solid var(--c1);
     cursor: pointer;
     transition: transform 0.1s cubic-bezier(0.25, 0.1, 0.25, 1);
+
+    &:hover{
+        transform: scale(1.2);
+    }
     
 }
 
-.input :hover {
+/* .input :hover {
     transform: scale(1.1);
-  }
+  } */
 
