--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -4,7 +4,7 @@
     height: 50px;
     align-items: center;
     justify-content: space-between;
-    border-radius: 25px;
+    border-radius: 30px;
     margin: 5px;
     
   }
@@ -45,7 +45,7 @@
     transition: transform 0.1s cubic-bezier(0.5, 0.1, 0.5, 1);
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.2);
     }
 
     }
@@ -54,6 +54,13 @@
     height: 25px;
     object-fit: cover;
     border-radius: 50%;
+    border: 1px solid var(--cx);
+
+    transition: transform 0.1s cubic-bezier(0.5, 0.1, 0.5, 1);
+
+    &:hover {
+      transform: scale(5);
+    }
   }
 
  
