front U11: UI fix and bug fix

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -55,9 +55,13 @@ body, html {
     height: 90%;
     display: flex;
     border: 20px double var(--cx);
+    overflow: scroll;
     }
 
-
+    .container::-webkit-scrollbar{
+      display: none; 
+  }
+  
 
 
 
