--- a/src/css/message.css
+++ b/src/css/message.css
@@ -34,8 +34,15 @@
     gap: 5px;
     display: flex;
     flex-direction: column;
+    width: 35px;
     color: var(--lgr);
     font: var(--fnt);
+}
+
+.messageInfo span{
+    font-size: 8px;
+    font-weight: bold;
+    color: var(--c1);
 }
 
 .messageInfo img{
