--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,7 +1,7 @@
 
 body, html {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding-left: 0px;
 }
 
 .home {
@@ -55,7 +55,7 @@ body, html {
     height: 90%;
     display: flex;
     border: 20px double var(--cx);
-    overflow: scroll;
+    /* overflow: scroll; */
     }
 
     .container::-webkit-scrollbar{
@@ -64,7 +64,19 @@ body, html {
   
 
 
+@media screen and (max-aspect-ratio:  9/15) {
 
+
+/* @media (max-width: 768px) { */
+
+
+    .container{
+
+      width:90%;
+      height: 95%;
+    }
+  
+}
 
 
 
