--- a/src/css/message.css
+++ b/src/css/message.css
@@ -1,13 +1,15 @@
 .message{
+
+    overflow-wrap: break-word;
+    padding: 5px;
+    gap: 10px;
     display: flex;
-    align-items:start;
-    padding: 10px;
-    gap: 15px;
-   
+    margin-left: 10px;
 
     &.owner{
-        flex-direction: row-reverse;
 
+        flex-direction: row-reverse;
+        justify-content: right;
         &.owner p{
             background-color: var(--c0);
             color: var(--c4);
@@ -17,12 +19,12 @@
         }
 
         &.owner .messageData{
-            display: flex;
-            align-items:end;
+            align-items: end;
         }
 
         &.owner .messageData img{
             border-radius: 25px;
+            background-color: var(--c0);
             border: 5px solid var(--c0);
             border-top-right-radius: 0px;
         }
@@ -50,33 +52,33 @@
     border-radius: 50%;
     width: 30px;
     height: 30px;
+
     border: 1px solid var(--c2);
     
 }
 
 .messageData{
     max-width: 80%;
-    overflow-wrap: break-word;
     display:flex;
     flex-direction: column;
     gap: 10px;
-    display: flex;
 
 }
 .message p{
+    max-width: calc(100% - 20px);
     background-color: var(--c4);
     font-family: var(--fnt);
     color: var(--c0);
     border-radius: 25px;
     border-top-left-radius: 0px;
-    padding: 5px 10px;
-
+    padding: 10px 15px;
 }
 .messageData img{
     
     max-width: 50%;
     border-radius: 25px;
     border: 5px solid var(--c4);
+    background-color: var(--c4);
     border-top-left-radius: 0px;
     cursor: pointer;
 }
