--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -3,7 +3,6 @@
     display:flex;
     height: 50px;
     align-items: center;
-    justify-content: space-between;
     border-radius: 30px;
     margin: 5px;
     
@@ -40,7 +39,7 @@
     color: var(--c3);
     padding: 5px 10px;
     font-weight: bold;
-    border: none;
+
     cursor: pointer;
     transition: transform 0.1s cubic-bezier(0.5, 0.1, 0.5, 1);
 
@@ -63,4 +62,41 @@
     }
   }
 
+
+/* Media query for screens with a maximum width of 768px (adjust as needed) */
+@media (max-width: 768px) {
+  .logo1,
+  .usernav {
+    display: none; /* Hide logo1 and usernav */
+  }
+
+  .navbar{
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .user {
+    display: flex;
+    flex-direction: column; /* Stack elements vertically */
+    gap: 5px;
+  }
+
+  .navbar img{
+    height: 50px;
+    width: 50px;
+    transition: transform 0.1s cubic-bezier(0.5, 0.1, 0.5, 1);
+
+    &:hover {
+      transform: scale(1.6);
+
+    }
+  }
+
+  .navbar button {
+    size: 10px;;
+    position: relative;
+
+  }
+}
  
