--- a/src/css/search.css
+++ b/src/css/search.css
@@ -41,6 +41,7 @@
     &:hover{
         transform: translateX(20px);
         background-color: var(--cx);
+        border-radius: 30px 0px 0px 30px;
     }
 
 }
@@ -84,3 +85,41 @@
     object-fit: cover;
     border: 2px solid var(--c1);
 }
+
+
+
+/* Media query for screens with a maximum width of 768px (adjust as needed) */
+@media (max-width: 768px) {
+    .userChatInfo,
+    .usernav {
+      display: none; /* Hide logo1 and usernav */
+    }
+
+.userChat{
+
+    transition: transform 0.1s cubic-bezier(0.5, 0.1, 0.5, 1);
+
+    
+    &:hover {
+        transform: translateY(10px);
+        transform: translateX(3px);
+        background-color: transparent;
+    }
+}
+
+.userChat img{
+
+    height: 50px;
+    width: 50px;
+    transition: transform 0.1s cubic-bezier(0.5, 0.1, 0.5, 1);
+    
+    &:hover {
+        transform: scale(1.5);
+
+    }
+
+
+}
+  
+}
+   
