--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,8 +1,20 @@
 .sidebar {
-  flex: 1;
+  width: 265px;
   display: flex;
   background-color:var(--c0);
   flex-direction: column;
+
   border-radius: 30px;
   border-bottom-right-radius: 0px;
+
 }
+
+
+/* Media query for screens with a maximum width of 768px (adjust as needed) */
+@media (max-width: 768px) {
+ 
+  .sidebar {
+    width: 80px;
+    }
+
+  }
